# seed-cli

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: createDirectories.hpp  createFiles.hpp  createProject.hpp  generateFromTemplate.hpp  getUserInput.hpp  userInput.hpp
src/: createProject.cpp  main.cpp  userInput.cpp
src/core/: generateFromTemplate.cpp  getUserInput.cpp  userInput.cpp
src/utils/: createDirectories.cpp  createFiles.cpp  createProject.cpp
templates/cpp/: template.json
templates/cpp/content/: .gitignore.tpl  CMakeLists.txt.tpl  main.cpp.tpl
